Fix filtered list toolbar overflow on mobile devices
Scenes list page is still ugly, but that will be addressed separately.

--- a/ui/v2.5/src/components/List/styles.scss
+++ b/ui/v2.5/src/components/List/styles.scss
@@ -871,6 +871,14 @@ input[type="range"].zoom-slider {
     flex-wrap: wrap;
     justify-content: center;
     row-gap: 0.5rem;
+
+    &:first-child {
+      justify-content: flex-start;
+    }
+
+    &:last-child {
+      justify-content: flex-end;
+    }
   }
 
   .btn.display-mode-select {
