--- a/ui/v2.5/src/components/Scenes/styles.scss
+++ b/ui/v2.5/src/components/Scenes/styles.scss
@@ -910,6 +910,7 @@ input[type="range"].blue-slider {
   & > div {
     display: flex;
     flex: 1;
+    flex-wrap: nowrap;
 
     &:first-child {
       justify-content: flex-start;
@@ -921,6 +922,16 @@ input[type="range"].blue-slider {
 
     &:last-child {
       justify-content: flex-end;
+    }
+
+    @include media-breakpoint-down(xs) {
+      &:nth-child(2) {
+        justify-content: flex-end;
+      }
+
+      &:last-child {
+        display: none;
+      }
     }
   }
 }
